--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=21w15a
-yarn_mappings=21w15a+build.16
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.6
 loader_version=0.11.3
 # Mod Properties
 mod_version=1.0-SNAPSHOT
@@ -11,4 +11,4 @@ maven_group=io.github.VanillaOverhaulPlus
 archives_base_name=VanillaOverhaulPlus
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.33.0+1.17
+fabric_version=0.33.0+1.16
